===Montreal Changelog===

1.0.1 (02/06/01)
	*Fixed Undefined Index error in page--node--portfolio-basic.tpl
  *Removed call to missing JS file.
  *Minor responsive CSS tweaks.
  *Updated documentation to clarify some areas. 

1.0 (02/03/01)
  *Initial release.