@@ -1,14 +1,40 @@
 	<!-- LEFT SLIDER -->
 	<div class="eight columns blackvertical">
+	
+	  <!-- New portfolio slider implementation using a single image field, since version 1.0.1 -->
+	  <?php if (render($content['field_portfolio_basic_slider'])) : ?>
 		<div class="flexslider">
 			<!-- SLIDES -->
 			<ul class="slides">
-				<?php if (render($content['field_portfolio_test_slider'])) : ?>
-				  <?php print render($content['field_portfolio_test_slider']); ?>
+				<?php if (render($content['field_portfolio_basic_slider'])) : ?>
+				  <?php print render($content['field_portfolio_basic_slider']); ?>
 				<?php endif; ?>
-				
 			</ul>
 	  </div>
+	  <?php endif; ?>
+	  <!-- End portfolio slider -->
+	  
+	  <!-- Legacy portfolo support for initial version 1.0 -->
+	  <?php if (render($content['field_portfolio_basic_slide_1'])) : ?>
+	  <div class="flexslider">
+			<!-- SLIDES -->
+			<ul class="slides">
+				<?php if (render($content['field_portfolio_basic_slide_1'])) : ?>
+				  <li><?php print render($content['field_portfolio_basic_slide_1']); ?></li>
+				<?php endif; ?>
+				
+				<?php if (render($content['field_portfolio_basic_slide_2'])) : ?>
+				  <li><?php print render($content['field_portfolio_basic_slide_2']); ?></li>
+				<?php endif; ?>
+				
+				<?php if (render($content['field_portfolio_basic_slide_3'])) : ?>
+				  <li><?php print render($content['field_portfolio_basic_slide_3']); ?></li>
+				<?php endif; ?>
+			</ul>
+	  </div>
+	  <?php endif; ?>
+	  <!-- End legacy support -->
+	  
   </div>
 
   <!-- RIGHT SIDE -->
@@ -27,10 +53,10 @@
 	      hide($content['field_portfolio_basic_image']);
 	      hide($content['field_portfolio_basic_tags']);
 	      hide($content['field_portfolio_basic_banner']);
-	      hide($content['field_portfolio_test_slider']);
-	      hide($content['field_portfolio_basic_slide_1']);
-	      hide($content['field_portfolio_basic_slide_2']);
-	      hide($content['field_portfolio_basic_slide_3']);
+	      hide($content['field_portfolio_basic_slider']);
+	      hide($content['field_portfolio_basic_slide_1']);  //legacy support only 
+	      hide($content['field_portfolio_basic_slide_2']);  //legacy support only 
+	      hide($content['field_portfolio_basic_slide_3']);  //legacy support only 
 	      print render($content);
 	    ?>
 	  </div>
